alteração na descrição da imagem

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="slider">
             <div class="slides">
-                <img src="image/logo.png" alt="slide 1.1" />
+                <img src="image/logo.png" alt="logo" />
                 <img src="image/Slide1.jpeg" alt="slide 1" />
                 <img src="image/Slide2.jpeg" alt="slide 2" />
                 <img src="image/Slide3.jpeg" alt="slide 3" />
